1. Симуляция терминала Linux